objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <formula>IF( ( AnnualRevenue &gt;20000000),&quot;High Priority&quot;, IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF( Overdue_Invoices__c &gt; 0,  IMAGE(&apos;/resource/1325626164000/acct_pastdue&apos;, &apos;Past Due&apos;), IMAGE(&apos;/resource/1325626149000/acct_paid&apos;, &apos;Paid in Full&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Value__c</fullName>
        <formula>IF( Total_Value_of_Won_Opportunities__c  &lt; 25000, IMAGE(&apos;/resource/1325290399000/dollar_two&apos;, &apos;two&apos;) , 
IF( ((25000 &lt;= Total_Value_of_Won_Opportunities__c ) &amp;&amp;  (Total_Value_of_Won_Opportunities__c &lt; 100000)), IMAGE(&apos;/resource/1325290455000/dollar_four&apos;, &apos;four&apos;), 
IMAGE(&apos;/resource/1325290514000/dollar_five&apos;, &apos;five&apos;)  
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buying_Relationship__c</fullName>
        <label>Buying Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Outside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Certifications__c</fullName>
        <label>Competitive Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>SUN</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Year_Revenue_Goal__c</fullName>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Chatter_Group__c</fullName>
        <label>Customer Chatter Group</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Index__c</fullName>
        <inlineHelpText>What does this customer think of us?</inlineHelpText>
        <label>Customer Satisfaction Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Extremely Satisfied - Customer Evangelist</fullName>
                </value>
                <value>
                    <fullName>B - Satisfied</fullName>
                </value>
                <value>
                    <fullName>C - Neutral</fullName>
                </value>
                <value>
                    <fullName>D - Dissatisfied - At risk of losing business</fullName>
                </value>
                <value>
                    <fullName>F - Unsatisfactory - Losing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Value__c</fullName>
        <formula>IF( (Net_Worth__c &gt;2000000),&quot;High Priority&quot;, IF(AND(Net_Worth__c &lt; 2000000, Net_Worth__c &gt; 1000000),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?lid=null&amp;aid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__AGeoCode?id=&quot; &amp; Id,&quot;Locate Account&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Located Yet</fullName>
                    <default>true</default>
                    <label>Not Located Yet</label>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>Problem with Address</fullName>
                </value>
                <value>
                    <fullName>Bad Google Key</fullName>
                </value>
                <value>
                    <fullName>Google Exhausted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FN__Which_Address__c</fullName>
        <label>Mapping Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                    <default>true</default>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Do Not Map</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Status__c</fullName>
        <label>Geo Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New address</fullName>
                </value>
                <value>
                    <fullName>No close match</fullName>
                </value>
                <value>
                    <fullName>Confirmed address</fullName>
                </value>
                <value>
                    <fullName>Custom location</fullName>
                </value>
                <value>
                    <fullName>Automatic match</fullName>
                </value>
                <value>
                    <fullName>Approximate match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Attainment__c</fullName>
        <description>Measure of YTD Revenue vs. Goal</description>
        <formula>YTD_Revenue_Generated__c  /  Current_Year_Revenue_Goal__c</formula>
        <label>% Goal Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InterviewID__c</fullName>
        <label>InterviewID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Year_Revenue_Generated__c</fullName>
        <label>Last Year Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_To_Opportunity_Close_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Liabilities__c</fullName>
        <label>Liabilities</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_the_Account__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp; BillingStreet &amp; &quot;%20&quot; &amp; BillingCity &amp; &quot;%20&quot; &amp; BillingState &amp; &quot;%20&quot; &amp; BillingPostalCode, IMAGE(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=01546000000tfhz&quot;, &quot;Map Address in Google&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map the Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <formula>Annual_Income__c+ Personal_Assets__c+ Other_Income__c-Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Number Closed Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Number Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Number Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Leads Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Number Leads Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Number Leads Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number open opportunities owned by the current partner account</description>
        <label>Number Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opportunities__c</fullName>
        <label>Number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Caes__c</fullName>
        <label># Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Lost__c</fullName>
        <label># Opportunities Lost</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunities_Won__c</fullName>
        <label># Opportunities Won</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <label>Other Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoice_Revenue__c</fullName>
        <label>Overdue Invoice Revenue</label>
        <summarizedField>Invoice_Example__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Example__c.Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoices__c</fullName>
        <label>Overdue Invoices</label>
        <summaryFilterItems>
            <field>Invoice_Example__c.Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expert Software Solutions Delivery</fullName>
                </value>
                <value>
                    <fullName>Authorized Business Consulting</fullName>
                </value>
                <value>
                    <fullName>Data Architecture Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Geographic_Coverage__c</fullName>
        <label>Partner Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>DevConnect Member</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Assets__c</fullName>
        <label>Personal Assets</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller Program</fullName>
                </value>
                <value>
                    <fullName>Services Program</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Worldwide Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Consulting Program</fullName>
                </value>
                <value>
                    <fullName>Distributor Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;CASE( Account_Priority__c , &quot;High Priority&quot;, &quot;01546000000tfhw&quot;, &quot;Medium Priority&quot;, &quot;01546000000tfhx&quot;, &quot;Low Priority&quot;, &quot;01546000000tfhy&quot;,&quot;&quot;),&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Segment Accounts by Region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Date__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Level__c</fullName>
        <label>SLA Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scorecard_Last_Updated__c</fullName>
        <label>Scorecard Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Show_Partner_Users__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N46000000UCu5&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000tfi1&quot;, &quot;Show Partner Users&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Partner Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Health__c</fullName>
        <formula>IF( of_Escalated_Cases__c &gt; 3, IMAGE(&apos;/img/samples/light_red.gif&apos;, &apos;red&apos;) , 
IMAGE(&apos;/img/samples/light_green.gif&apos;, &apos;green&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Loss_Num__c</fullName>
        <label>Total Opportunity Loss (Num)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Loss__c</fullName>
        <formula>Total_Opportunity_Loss_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Win__c</fullName>
        <formula>Total_Opportuniy_Win_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Win</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportuniy_Win_Num__c</fullName>
        <label>Total Opportuniy Win (Num)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Open_Opportunities__c</fullName>
        <label>Open Opportunity Revenue</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Won_Opportunities__c</fullName>
        <label>Total Value of Won Revenue</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Value_Closed_Won_Opportunties__c</fullName>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Open_Opportunties__c</fullName>
        <label>Value Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Largest_Open_Opportunities__c</fullName>
        <label>Value of Largest Open Opportunity</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vertical_Coverage__c</fullName>
        <label>Vertical Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YTD_Revenue_Generated__c</fullName>
        <label>YTD Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Escalated_Cases__c</fullName>
        <label># of Escalated Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reps_Trained__c</fullName>
        <label>% of Reps Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.PHONE1</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
</CustomObject>